cmake_minimum_required(VERSION 3.24)
project(Cpp_Algorithm)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Cpp_Algorithm main.cpp)
#add_executable(Cpp_Algorithm BAEKJOON_1000.cpp)
#add_executable(Cpp_Algorithm BAEKJOON_2908.cpp)
#add_executable(Cpp_Algorithm BAEKJOON_1977.cpp)
#add_executable(Cpp_Algorithm BAEKJOON_11098.cpp)
add_executable(Cpp_Algorithm BAEKJOON_5635.cpp)
